# pfailover

./: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
data/: Makefile  Makefile.am  Makefile.in  example.primary  example.secondary  pfailover.conf
src/: Makefile  Makefile.am  Makefile.in  conf.cpp  conf.h  ipc.cpp  ipc.h  monitor.cpp  monitor.h  pfailover  pfailover.cpp  pfailover.h
src/.deps/: conf.Po  ipc.Po  monitor.Po  pfailover.Po
